lang/tests/compile_fail/multiple_tails.stderr
error: at most one tail field (&str / &[u8]) is allowed per struct
 --> tests/compile_fail/multiple_tails.rs:6:12
  |
6 | pub struct BadMultiTail<'a> {
  |            ^^^^^^^^^^^^
